--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/CodeAstra/calci#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1"
